PersonalDevOrg/force-app/main/default/objects/Event__c/fields/Created_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Created_By_ID__c</fullName>
    <label>Created By ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>