PersonalDevOrg/force-app/main/default/objects/Event__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <label>Deleted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>