PersonalDevOrg/force-app/main/default/objects/Event__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <label>End Date/Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>