PersonalDevOrg/force-app/main/default/objects/Event__c/fields/Event_Organizer__c.field-meta.xml
<CustomField>
    <fullName>Event_Organizer__c</fullName>
    <label>Event Organizer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>