PersonalDevOrg/force-app/main/default/objects/Event__c/fields/Last_Modified_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_ID__c</fullName>
    <label>Last Modified By ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>