PersonalDevOrg/force-app/main/default/objects/Event__c/fields/Last_Referenced_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Referenced_Date__c</fullName>
    <label>Last Referenced Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>