PersonalDevOrg/force-app/main/default/objects/Event__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <label>Live?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>