PersonalDevOrg/force-app/main/default/objects/Event__c/fields/Location_Verified__c.field-meta.xml
<CustomField>
    <fullName>Location_Verified__c</fullName>
    <label>Location Verified?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>