PersonalDevOrg/force-app/main/default/objects/Event__c/fields/Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>Max_Seats__c</fullName>
    <label>Max Seats</label>
    <type>Date</type>
</CustomField>