PersonalDevOrg/force-app/main/default/objects/Event__c/fields/People_Attending__c.field-meta.xml
<CustomField>
    <fullName>People_Attending__c</fullName>
    <label># People Attending</label>
    <type>Phone</type>
</CustomField>