PersonalDevOrg/force-app/main/default/objects/Event__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <label>Recurring?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>