PersonalDevOrg/force-app/main/default/objects/Event__c/fields/Remaining_Seats__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Seats__c</fullName>
    <label>Remaining Seats</label>
    <type>Email</type>
</CustomField>